--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	<artifactId>course</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>course</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Descricao bonita</description>
 
 	<properties>
 		<java.version>17</java.version>
