--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.profiles.active=test
 spring.jpa.open-in-view=true
 spring.devtools.remote.secret=123
+spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
+
+
